# nerf-basics

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 1-volumetric-rendering.ipynb  2-volumetric-rendering-SGD.ipynb  volumetric-rendering-sgd.ipynb
