[tool.poetry]
name = "nerf-basics"
version = "0.1.0"
description = ""
authors = ["Himanshu Chaturvedi <hchaturvedi.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
